# POO

Lab10/: CMakeLists.txt  main.cpp  masinute
Lab10/include/: cosCRUDGUI.h  cosReadOnlyGUI.h  domeniu_masina.h  list.h  observer.h  qt_ui.h  repo_masina.h  service_masina.h  service_spalatorie.h  table_model.h  teste.h  undo.h
Lab10/src/: console_ui.cpp  cosCRUDGUI.cpp  cosReadOnlyGUI.cpp  qt_ui.cpp  repo_masina.cpp  service_masina.cpp  service_spalatorie.cpp  table_model.cpp  teste.cpp
Lab5/: CMakeLists.txt  domeniu_masina.c  domeniu_masina.h  lista.c  lista.h  main.c  repo.c  repo.h  service_masini.c  service_masini.h  test_masini.c  test_masini.h  ui.c  ui.h  validator_masina.c  validator_masina.h
Lab6/: CMakeLists.txt  domeniu_masina.h  main.cpp  repo_masina.cpp  repo_masina.h  service_masina.cpp  service_masina.h  teste.cpp  teste.h  ui.cpp  ui.h
Lab7/: CMakeLists.txt  domeniu_masina.cpp  domeniu_masina.h  list.cpp  list.h  main.cpp  repo_masina.cpp  repo_masina.h  service_masina.cpp  service_masina.h  teste.cpp  teste.h  ui.cpp  ui.h
Lab8/: CMakeLists.txt  domeniu_masina.h  exceptii.h  main.cpp  repo_masina.cpp  repo_masina.h  service_masina.cpp  service_masina.h  service_spalatorie.cpp  service_spalatorie.h  teste.cpp  teste.h  ui.cpp
Lab9/: CMakeLists.txt  domeniu_masina.cpp  exceptii.h  main.cpp  masinute  service_masina.h  service_spalatorie.h  teste.h  ui.h
Laborator2_4/: CMakeLists.txt  main.cpp
Laborator2_4/domain/: lista.cpp  lista.h  medicament.cpp  medicament.h
Laborator2_4/prezentare/: consola.cpp  consola.h
Laborator2_4/repository/: repo_medicamente.cpp  repo_medicamente.h
Laborator2_4/service/: service_medicamente.cpp  service_medicamente.h
Laborator2_4/teste/: test.cpp  test.h
Laborator2_4/validator/: validator_medicament.cpp  validator_medicament.h
practic2/: CMakeLists.txt  main.cpp  melodie.cpp  melodie.h  melodii  obs.cpp  repo_melodie.cpp  repo_melodie.h  service_melodie.cpp  service_melodie.h  table_model.cpp  table_model.h  test_repo  test_service  teste.cpp  teste.h  ui.cpp  ui.h
subiect bili/: CMakeLists.txt  main.cpp  repo_student.cpp  repo_student.h  service_student.cpp  service_student.h  student.cpp  student.h  table_model.cpp  table_model.h  test_base  test_repo  test_service  teste.cpp  teste.h  ui.cpp  ui.h
untitled1/: CMakeLists.txt  gui.cpp  gui.h  main.cpp  melodie.cpp  melodie.h  melodii  observer.h  repo_melodie.cpp  repo_melodie.h  service_melodie.cpp  service_melodie.h
untitled2/: CMakeLists.txt
untitled3/: CMakeLists.txt  main.cpp  product_management.cpp  product_management.h
untitled4/: CMakeLists.txt  gui.cpp  gui.h  main.cpp  repo_tractor.cpp  repo_tractor.h  service_tractoare.cpp  service_tractoare.h  tractoare  tractor.cpp  tractor.h  validator_tractor.cpp  validator_tractor.h
(+41 files in other folders)
